--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ h1 {
     margin-left: 392px;
     justify-content: center;
     text-align: center;
-    background-color:#8fb3bc;
+    background-color:#556e7461;
     border-radius: 20px;
-    box-shadow:  16px 17px #48ac4b9e;
+    box-shadow:  16px 17px  #6a424261;
 }
 
 .box input {
