--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    /* background-color:rgb(148, 171, 172) ; */
+    background: url(./bg.jpg) no-repeat center center/cover;
 }
 .main{
     display: flex;
@@ -11,10 +11,10 @@ body{
     align-items: center;
 
     margin: 50px auto;
-    height: 540px;
+    height: 590px;
     width: 24%;
     box-shadow:   0px 0px 10px black;
-    background: white;
+    background-color: #f4e5ffa1;
     border-radius: 30px;
 }
 h1{
